src/objects/ints__EfxReport_FW_Message__c.object
<CustomObject>
    <fields>
        <fullName>ints__EfxReport_FraudWarning__c</fullName>
        <label>EfxReport FraudWarning</label>
        <referenceTo>ints__EfxReport_FraudWarning__c</referenceTo>
        <relationshipLabel>EfxReport FW Messages</relationshipLabel>
        <relationshipName>EfxReport_FW_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__code__c</fullName>
        <label>code</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <label>description</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__priority__c</fullName>
        <label>priority</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport FW Message</label>
    <nameField>
        <displayFormat>EFX-FW-MSG-{0000000000}</displayFormat>
        <label>EfxReport FW Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport FW Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>